--- a/demo-jdbc/pom.xml
+++ b/demo-jdbc/pom.xml
@@ -9,16 +9,22 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demo-config</artifactId>
-
-
-
+    <artifactId>demo-jdbc</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.38</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>demo-config</finalName>
@@ -29,4 +35,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
