--- a/demo-security/src/main/resources/application.properties
+++ b/demo-security/src/main/resources/application.properties
@@ -5,7 +5,7 @@ customer=mogujie
 
 # PROFILES
 ## dev| prod
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 
 
@@ -15,3 +15,4 @@ applicationName=spring-boot
 Example.name=example
 Example.value=1
 
+security.user.password=123456
