--- a/demo-web/pom.xml
+++ b/demo-web/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demo-config</artifactId>
+    <artifactId>demo-web</artifactId>
 
 
 
@@ -18,6 +18,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+
 
     </dependencies>
     <build>
@@ -29,4 +34,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
